# ghostshell

./: .cproject  .gitignore  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  busy  configure  configure.ac  fillpipe  ghostshell  out.txt  test.sh
runcmd/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.mk  debug.h  gendist.mk  runcmd.c  runcmd.h  test.mk  test1.c
runcmd/.deps/: runcmd.Plo
runcmd/.libs/: libruncmd.lai
shell/: Makefile  Makefile.am  Makefile.in  README  example.c  foosh.txt  gendist.mk  ghostshell  job.c  job.h  list.c  list.h  local.mk  main.c  parser.c  run_commands.c  run_commands.h  test.mk  test.sh  tparse.h
shell/.deps/: list.Po  main.Po  parser.Po
shell/.libs/: ghostshell  lt-ghostshell
